syntax = "proto3";
package container;

service ContainerService {
    rpc CreateContainer (CreateContainerRequest) returns (CreateContainerResponse);
    rpc RunContainer (RunContainerRequest) returns (RunContainerResponse);    
    rpc KillContainer (KillContainerRequest) returns (KillContainerResponse);    
    rpc StateContainer (StateContainerRequest) returns (StateContainerResponse);    
    rpc DeleteContainer (DeleteContainerRequest) returns (DeleteContainerResponse);    
}

message CreateContainerRequest {
    string uuid = 1;
}
message CreateContainerResponse {}

message RunContainerRequest {
    string uuid = 1;    
}
message RunContainerResponse {}

message KillContainerRequest {
    string uuid = 1;
}
message KillContainerResponse {}

message StateContainerRequest {
    string uuid = 1;
}
message StateContainerResponse {
    string state = 1; 
    optional int32 pid = 2;
}

message DeleteContainerRequest {
    string uuid = 1;
}
message DeleteContainerResponse {}