syntax = "proto3";
package isolated_container;

service IsolatedContainerService {
    rpc CreateContainer (CreateContainerRequest) returns (CreateContainerResponse);
    rpc RunContainer (RunContainerRequest) returns (RunContainerResponse);    
    rpc StopContainer (StopContainerRequest) returns (StopContainerResponse);
    rpc StateContainer (StateContainerRequest) returns (StateContainerResponse);    
}

message CreateContainerRequest {
    string image = 1;
    repeated string command = 2;
}
message CreateContainerResponse {
    string uuid = 1;    
}

message RunContainerRequest {
    string uuid = 1;    
}
message RunContainerResponse {}

message StopContainerRequest {
    string uuid = 1;
}
message StopContainerResponse {}

message StateContainerRequest {
    string uuid = 1;
}
message StateContainerResponse {
    string state = 1; 
    optional int32 pid = 2;
}
